--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 find_package(SDL2 REQUIRED)
 find_package(SDL2_ttf REQUIRED)
 
+include_directories("/usr/local/include")
+include_directories("/opt/homebrew/include")
+include_directories("/opt/homebrew/lib")
+
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set (SOURCE_DIR "${PROJECT_SOURCE_DIR}/src/")
