Initial audio square wave implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
 find_package(SDL2 REQUIRED)
 find_package(SDL2_ttf REQUIRED)
+find_package(SDL2_mixer REQUIRED)
 
 include_directories("/usr/local/include")
 include_directories("/opt/homebrew/include")
@@ -20,4 +21,4 @@ link_directories(${SOURCE_DIR})
 file (GLOB SOURCE_FILES "${SOURCE_DIR}/*.cpp")
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} SDL2::Main SDL2::TTF)
+target_link_libraries(${PROJECT_NAME} SDL2::Main SDL2::TTF SDL2::Mixer)
