Migrate to SDL3
Migrate from SDL2 to SDL3, which just required to change a couple of
method names. Due to the way SDL3 handles audio, it breaks the current
APU implementation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,10 @@ if( ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS}")
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS} -s EXPORTED_RUNTIME_METHODS='[\"FS\",\"callMain\"]' -lembind")
 else()
-    find_package(SDL2 REQUIRED)
-    find_package(SDL2_ttf REQUIRED)
-    find_package(SDL2_mixer REQUIRED)
-    find_package(Freetype REQUIRED)
+    find_package(SDL3 CONFIG REQUIRED)
+    find_package(SDL3_ttf CONFIG REQUIRED)
 endif()
 
-include_directories(${SDL2_INCLUDE_DIRS})
-include_directories(${SDL2_MIXER_INCLUDE_DIRS})
-include_directories(${SDL2_TTF_INCLUDE_DIRS})
 include_directories("/usr/local/include")
 include_directories("/opt/homebrew/include")
 include_directories("/opt/homebrew/lib")
@@ -42,4 +37,4 @@ list(APPEND SOURCE_FILES ${MAIN_FILE})
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2_MIXER_LIBRARIES} ${SDL2_TTF_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} SDL3::SDL3 SDL3_ttf::SDL3_ttf)
