Restructure the build process for cross-platform support
Restructured the project to decouple the platform specifics from the core
logic, with addition of a helper Makefile. Additionally, this allows to simplify and
split the CMake config accross the platform target directories.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,40 +1,32 @@
-cmake_minimum_required(VERSION 3.5)
-project (NoobBoy)
+cmake_minimum_required(VERSION 3.10)
+project(NoobBoy LANGUAGES CXX)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-if( ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
+option(BUILD_DESKTOP "Build the desktop application" OFF)
+option(BUILD_WEB "Build the WebAssembly target" OFF)
+option(BUILD_TERMINAL "Build the terminal version" OFF)
+option(BUILD_TESTS "Build tests" OFF)
+
+if(${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
     set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};${EMSDK_PATH}/upstream/emscripten/cache/sysroot/lib/pkgconfig")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_SDL=2 -s USE_FREETYPE=1 -s USE_SDL_MIXER=2 -s USE_SDL_TTF=2")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${USE_FLAGS}")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${USE_FLAGS} -s EXPORTED_RUNTIME_METHODS='[\"FS\",\"callMain\"]' -lembind")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s EXPORTED_RUNTIME_METHODS='[\"FS\",\"callMain\"]' -lembind")
 else()
     find_package(SDL3 CONFIG REQUIRED)
     find_package(SDL3_ttf CONFIG REQUIRED)
 endif()
 
-include_directories("/usr/local/include")
-include_directories("/opt/homebrew/include")
-include_directories("/opt/homebrew/lib")
+set(SRC_DIR "${PROJECT_SOURCE_DIR}/src")
+set(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+file(GLOB CORE_SOURCES "${SRC_DIR}/*.cpp")
+list(FILTER CORE_SOURCES EXCLUDE REGEX "main.*\\.cpp")
 
-set (SOURCE_DIR "${PROJECT_SOURCE_DIR}/src/")
+add_library(NoobBoyCore STATIC ${CORE_SOURCES})
+target_include_directories(NoobBoyCore PUBLIC ${INCLUDE_DIR})
 
-include_directories(${SOURCE_DIR})
-link_directories(${SOURCE_DIR})
-
-file (GLOB SOURCE_FILES "${SOURCE_DIR}/*.cpp")
-list(FILTER SOURCE_FILES EXCLUDE REGEX "main(.*)\\.cpp")
-
-if( ${CMAKE_SYSTEM_NAME} MATCHES "Emscripten")
-    set(MAIN_FILE "${SOURCE_DIR}/main_emscripten.cpp")
-else ()
-    set(MAIN_FILE "${SOURCE_DIR}/main.cpp")
-endif ()
-
-list(APPEND SOURCE_FILES ${MAIN_FILE})
-
-add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-
-target_link_libraries(${PROJECT_NAME} SDL3::SDL3 SDL3_ttf::SDL3_ttf)
+if(BUILD_DESKTOP)
+    add_subdirectory(platforms/desktop)
+endif()
